--- a/package.xml
+++ b/package.xml
@@ -14,6 +14,7 @@
   <depend>filters</depend>
   <depend>pluginlib</depend>
   <depend>sensor_msgs</depend>
+  <depend>message_filters</depend>
   <depend>tf2</depend>
   <depend>tf2_ros</depend>
 
