--- a/config/params_test_filter.yaml
+++ b/config/params_test_filter.yaml
@@ -3,7 +3,7 @@ pc_to_pc_filter_chain_node:
     input_pointcloud_topic: rs0_points
     output_pointcloud_topic: output_cloud
     filter1:
-      name: filter1.params
+      name: filter1.params.
       type: point_cloud_filters/TestFilter
       params:
         string: "hello_world"
